fix: 添加 wwwroot 卷挂载并修复缓存问题
- 在 docker-compose.yml 中添加 wwwroot 卷挂载
- 在 index.html 中添加 JS 文件版本号参数防止缓存
- 现在更新前端文件不需要重新构建镜像

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "8096:8096"
     volumes:
       - ./certs:/app/certs:ro
+      - ./wwwroot:/app/wwwroot:ro
     environment:
       - ASPNETCORE_URLS=https://+:8096
       - ASPNETCORE_ENVIRONMENT=Production
